--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,6 +1,10 @@
 * {
 	margin: 0;
 	padding: 0;
+	.link {
+		text-decoration: none;
+		color: inherit;
+	}
 }
 
 $mintBlue: #88b2cc;
@@ -67,7 +71,7 @@ $mintBlue: #88b2cc;
 		align-items: center;
 		.logo {
 			img {
-				width: 120px;
+				width: 100px;
 			}
 		}
 		.links {
@@ -94,6 +98,95 @@ $mintBlue: #88b2cc;
 				justify-content: center;
 				align-items: center;
 				font-weight: 300;
+				color: white;
+				border: 3px solid rgb(252, 239, 239);
+				&:hover {
+					color: $mintBlue;
+					background-color: #f2f7fa;
+					border: 3px solid #f2f7fa;
+				}
+			}
+		}
+	}
+}
+
+//Footer
+
+footer {
+	margin-top: 10px;
+	padding: 20px;
+	background-color: $mintBlue;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-radius: 10px;
+	img {
+		height: 50px;
+	}
+	span {
+		color: white;
+	}
+}
+
+//Home
+
+.home {
+	margin: 50px 0;
+	.posts {
+		margin-top: 5px;
+		display: flex;
+		flex-direction: column;
+		gap: 150px;
+		.post {
+			display: flex;
+			gap: 100px;
+
+			&:nth-child(2n) {
+				flex-direction: row-reverse;
+			}
+			.img {
+				flex: 2;
+				position: relative;
+				&::after {
+					content: "";
+					width: 100%;
+					height: 100%;
+					background-color: $mintBlue;
+					position: absolute;
+					top: 15px;
+					left: -15px;
+					z-index: -1;
+				}
+				img {
+					width: 100%;
+					max-height: 400px;
+					object-fit: cover;
+				}
+			}
+			.content {
+				flex: 3;
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+				h1 {
+					font-size: 48px;
+				}
+				p {
+					font-size: 18px;
+				}
+				button {
+					width: max-content;
+					padding: 12px;
+					border: none;
+					border-radius: 6px;
+					background-color: $mintBlue;
+					color: white;
+					cursor: pointer;
+					&:hover {
+						color: $mintBlue;
+						background-color: whitesmoke;
+					}
+				}
 			}
 		}
 	}
