--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -191,3 +191,98 @@ footer {
 		}
 	}
 }
+
+//Single
+
+.single {
+	display: flex;
+	padding: 0 20px;
+	gap: 50px;
+
+	.content {
+		flex: 5;
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		img {
+			width: 100%;
+			height: 300px;
+			object-fit: cover;
+		}
+
+		.user {
+			display: flex;
+			align-items: center;
+			gap: 10px;
+			font-size: 14px;
+			img {
+				width: 50px;
+				height: 50px;
+				border-radius: 50%;
+				object-fit: cover;
+			}
+			.info {
+				margin: 10px 5px;
+
+				span {
+					font-weight: bold;
+				}
+			}
+			.edit {
+				display: flex;
+				gap: 5px;
+				img {
+					width: 20px;
+					height: 20px;
+					cursor: pointer;
+				}
+			}
+		}
+		h1 {
+			font-size: 42px;
+			color: #333;
+		}
+		p {
+			text-align: justify;
+			line-height: 30px;
+		}
+	}
+	.menu {
+		flex: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 25px;
+
+		h1 {
+			font-size: 20px;
+			color: #555;
+		}
+		.post {
+			display: flex;
+			flex-direction: column;
+			gap: 10px;
+			img {
+				width: 100%;
+				height: 200px;
+				object-fit: cover;
+			}
+			h2 {
+			}
+			button {
+				width: max-content;
+				padding: 12px;
+				border: none;
+				border-radius: 6px;
+				background-color: $mintBlue;
+				color: white;
+				border: 1px solid white;
+				&:hover {
+					background-color: whitesmoke;
+					color: $mintBlue;
+					border: 1px solid #333;
+					cursor: pointer;
+				}
+			}
+		}
+	}
+}
