ReactQuill editor is setup

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -286,3 +286,18 @@ footer {
 		}
 	}
 }
+
+//Add
+
+.add {
+	margin-top: 20px;
+	display: flex;
+	gap: 20px;
+
+	.content {
+		flex: 5;
+	}
+	.menu {
+		flex: 2;
+	}
+}
