--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -296,8 +296,73 @@ footer {
 
 	.content {
 		flex: 5;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+
+		input {
+			padding: 10px;
+			border: 1px solid lightgray;
+		}
+		.editorContainer {
+			height: 300px;
+			overflow: scroll;
+			border: 1px solid lightgray;
+			.editor {
+				height: 100%;
+				border: none;
+			}
+		}
 	}
 	.menu {
 		flex: 2;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+
+		.item {
+			border: 1px solid lightgray;
+			padding: 12px;
+			border-radius: 6px;
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-between;
+			font-size: 12px;
+			color: #555;
+			h1 {
+				font-size: 20px;
+			}
+			.file {
+				text-decoration: underline;
+				cursor: pointer;
+			}
+			.buttons {
+				display: flex;
+				justify-content: space-between;
+
+				:first-child {
+					cursor: pointer;
+					color: $mintBlue;
+					background-color: whitesmoke;
+					border: 1px solid $mintBlue;
+					padding: 3px 5px;
+				}
+				:last-child {
+					cursor: pointer;
+					color: whitesmoke;
+					background-color: $mintBlue;
+					border: 1px solid whitesmoke;
+					padding: 3px 5px;
+				}
+			}
+			.cat {
+				display: flex;
+				justify-content: flex-start;
+				align-items: center;
+				color: $mintBlue;
+				gap: 3px;
+			}
+		}
 	}
 }
