--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -120,6 +120,7 @@ footer {
 	justify-content: space-between;
 	align-items: center;
 	border-radius: 10px;
+	flex-shrink: 0;
 	img {
 		height: 50px;
 	}
@@ -140,7 +141,9 @@ footer {
 		.post {
 			display: flex;
 			gap: 100px;
-
+			padding: 50px;
+			border-radius: 20px;
+			box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
 			&:nth-child(2n) {
 				flex-direction: row-reverse;
 			}
@@ -153,6 +156,7 @@ footer {
 					height: 100%;
 					background-color: $mintBlue;
 					position: absolute;
+					border-radius: 20px;
 					top: 15px;
 					left: -15px;
 					z-index: -1;
@@ -161,6 +165,10 @@ footer {
 					width: 100%;
 					max-height: 400px;
 					object-fit: cover;
+					border-radius: 20px;
+					&:hover {
+						scale: (1.05);
+					}
 				}
 			}
 			.content {
